# ack_drive_controller

./: CMakeLists.txt  LICENSE  README.md  ack_6wd_plugin.xml  ack_drive_plugin.xml  package.xml
ack_drive_controller/: CMakeLists.txt  package.xml
ack_drive_controller/include/ack_drive_controller/: odometry.hpp  rolling_mean_accumulator.hpp  visibility_control.h
ack_drive_controller/src/: ack_drive_controller.cpp  speed_limiter.cpp
include/ack_6wd_controller/: ack_6wd_controller.hpp  odometry.hpp  rolling_mean_accumulator.hpp  speed_limiter.hpp  visibility_control.h
include/ack_drive_controller/: ack_drive_controller.hpp  odometry.hpp  speed_limiter.hpp
src/: ack_6wd_controller.cpp  ack_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
