<?xml version="1.0"?>
<package format="3">
  <name>ack_6wd_controller</name>
  <version>1.0.0</version>
  <description>Controller for a ackermann 6 wheels drive mobile base.</description>
  <maintainer email="firstkafaizpangestu@gmail.com">Faiz Pangestu</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <build_depend>pluginlib</build_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
